update: update book api & add status column to books table
